syntax = "proto3";

package buttons.api.v1;

option go_package = "github.com/sundaytycoon/buttons-api/gen/go/proto/buttons/api/v1";
option java_multiple_files = true;
option java_outer_classname = "AuthProto";
option java_package = "proto.buttons.api.v1";

import "protoc-gen-openapiv2/options/annotations.proto";
import "google/api/annotations.proto";

// These annotations are used when generating the OpenAPI file.
option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    version: "1.0";
  };
  external_docs: {
    url: "https://github.com/sundaytycoon/buttons-api";
    description: "buttons-api gRPC-gateway repository";
  }
  schemes: HTTP;
};


service AuthService {
  rpc GetRedirectURL(GetRedirectURLRequest)  returns (GetRedirectURLResponse) {
    option (google.api.http) = {
      // Route to this method from GET requests to /api/v1/auth/redirect_url
      get: "/api/v1/auth/redirect_url"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "get redirect_url from provider"
      description: "generate redirect_url and give to webview"
      tags: "OAauth 2.0"
    };
  }
  rpc GetCallback(GetCallbackRequest)  returns (GetCallbackResponse) {
    option (google.api.http) = {
      // Route to this method from GET requests to /api/v1/auth/callback
      get: "/api/v1/auth/callback"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "get callback data"
      description: "google send me callback data "
      tags: "OAauth 2.0"
    };
  }
}

message GetRedirectURLRequest {
  string provider = 1;
}

message GetRedirectURLResponse {
  string provider = 1;
  string redirect_url = 2;
}


message GetCallbackRequest {
  string state = 1;
  string code = 2;
  string scope = 3;
  string authuser = 4;
  string prompt = 5;
}

message GetCallbackResponse {
}
